Update dependencies
* minor formatting
* drop now-unnecessary reflection (Use AnvilInventory#setRepairCostCount)